k8s/ping_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 3001         # порт по якому можна звератись до сервісу
      targetPort: 3000 # порт контейнера
  selector:
    app: ping      # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
