k8s/ping_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/ping
            pathType: "Prefix"
            backend:
              service:
                name: ping-service
                port:
                  number: 3001
